Fix #2035 Remove glyphicons and add style for unaligned material-icons

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -65,6 +65,11 @@ button.md-button.md-default-theme.oppia-learner-continue-button:hover {
   background-color: #115FD4;
 }
 
+/* Style for unaligned material-icons. */
+.material-icons{
+  vertical-align: middle;
+}
+
 .material-icons.md-18 {
   font-size: 18px;
 }
